Fixed unity config Fixed api authentication Moved css code from cshtml to site.css Removed client side package from nuget packages (already in bower) https://trello.com/c/QrhEIA4m/208-move-code-on-default-details-from-model-to-function   Moved code that sets the default values from model to function. Created code to only return the values inputed by user/consumer https://trello.com/c/qXS8Aj0X/207-2018-03-09-create-postman-for-andersonnotification   Created postman for logging in and sending email

--- a/AndersonNotification/AndersonNotificationWeb/Views/Shared/_Layout.cshtml
+++ b/AndersonNotification/AndersonNotificationWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     @Html.Partial("_PartialCSS")
 </head>
-<body>
+<body class="body-content">
     <nav class="navbar fixed-top navbar-toggleable-md navbar-default">
         <a class="navbar-brand" href="~/Home">
             <i class="fa fa-home" aria-hidden="true"></i>
@@ -73,21 +73,6 @@
     </div>
 </body>
 </html>
-
-<style>
-.footer {
-       position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    background-color: #4f4f4f;
-    color: white;
-    text-align: center;
-}
-
-</style>
 
 <div class="footer">
     &copy; 2018. - Anderson Group BPO Inc. | <a href="#">Anderson.Notification</a> - Private and Confidential.
