--- a/AndersonNotification/AndersonNotificationWeb/Content/Site.css
+++ b/AndersonNotification/AndersonNotificationWeb/Content/Site.css
@@ -13,3 +13,26 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: #4f4f4f;
+    color: white;
+    text-align: center;
+}
+
+.row {
+    margin-top: 15%;
+}
+
+.border {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
